deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: 539935451710.dkr.ecr.us-east-1.amazonaws.com/group15-hu2-ecr-repo:patient-service-20250329094946
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: 539935451710.dkr.ecr.us-east-1.amazonaws.com/group15-hu2-ecr-repo:appointment-service-20250329094946
        ports:
        - containerPort: 3001
